# spanish-quiz-backend

./: .gitignore  function_app.py  pyproject.toml  requirements.txt
app/: main.py
